2001-02-21  Phil Edwards  <pme@sources.redhat.com>

	* tests_flags.in:  Remove -n flag from call to echo.

2001-02-20  Benjamin Kosnik  <bkoz@redhat.com>

	* config/c_locale_gnu.h: Add clocale include.

2001-02-20  Phil Edwards  <pme@sources.redhat.com>

	* include/bits/stl_config.h:  Remove file.
	* src/Makefile.am (base_headers):  Remove from list.
	* configure:  Regenerate.
	* Makefile.in:  Ditto.
	* libio/Makefile.in:  Ditto.
	* libmath/Makefile.in:  Ditto.
	* libsupc++/Makefile.in:  Ditto.
	* src/Makefile.in:  Ditto.

	* include/bits/c++config:  Move relevant macros to here.
	* include/backward/alloc.h:  Include c++config.h instead.
	* include/backward/function.h:  Ditto.
	* include/backward/heap.h:  Ditto.
	* include/backward/pair.h:  Ditto.
	* include/bits/pthread_allocimpl.h:  Ditto.
	* include/bits/std_functional.h:  Ditto.
	* include/bits/std_iterator.h:  Ditto.
	* include/bits/std_numeric.h:  Ditto.
	* include/bits/std_utility.h:  Ditto.
	* include/bits/stl_algobase.h:  Ditto.
	* include/bits/type_traits.h:  Ditto.
	* src/stl-inst.cc:  Ditto.

2001-02-19  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* include/bits/basic_file.h: Add #pragma system_header
	* include/bits/basic_ios.h: Ditto.
	* include/bits/basic_string.h: Ditto.
	* include/bits/char_traits.h: Ditto.
	* include/bits/codecvt.h: Ditto.
	* include/bits/cpp_type_traits.h:  Ditto.
	* include/bits/fpos.h: Ditto.
	* include/bits/gslice.h: Ditto.
	* include/bits/gslice_array.h: Ditto.
	* include/bits/indirect_array.h: Ditto.
	* include/bits/ios_base.h: Ditto.
	* include/bits/limits_generic.h: Ditto.
	* include/bits/locale_facets.h: Ditto.
	* include/bits/localefwd.h: Ditto.
	* include/bits/mask_array.h: Ditto.
	* include/bits/sbuf_iter.h: Ditto.
	* include/bits/sequence_concepts.h: Ditto.
	* include/bits/slice.h: Ditto.
	* include/bits/slice_array.h: Ditto.
	* include/bits/std_algorithm.h: Likewise.
	* include/bits/std_bitset.h: Likewise.
	* include/bits/std_complex.h: Likewise.