@@ -419,7 +419,7 @@
 	  if (__int_bom)
 	    {	  
 	      size_t __size = __from_end - __from;
-	      __extension__ intern_type __cfixed[__size + 1];
+	      intern_type* __cfixed = static_cast<intern_type*>(alloca(sizeof(intern_type) * (__size + 1)));
 	      __cfixed[0] = static_cast<intern_type>(__int_bom);
 	      char_traits<intern_type>::copy(__cfixed + 1, __from, __size);
 	      __cfrom = reinterpret_cast<char*>(__cfixed);
@@ -524,7 +524,7 @@
 	  if (__ext_bom)
 	    {	  
 	      size_t __size = __from_end - __from;
-	      __extension__ extern_type __cfixed[__size + 1];
+	      extern_type* __cfixed = (sizeof(extern_type) * (__size + 1));
 	      __cfixed[0] = static_cast<extern_type>(__ext_bom);
 	      char_traits<extern_type>::copy(__cfixed + 1, __from, __size);
 	      __cfrom = reinterpret_cast<char*>(__cfixed);
