@@ -262,7 +262,7 @@ namespace std
 	      // Part one: (Re)fill external buf (_M_file->_IO_*) from
 	      // external byte sequence (whatever physical byte sink or
 	      // FILE actually is.)
-	      __extension__ char_type __conv_buf[_M_buf_size];
+	      char_type* __conv_buf = static_cast<char_type*>(alloca(sizeof(char_type) * _M_buf_size));
 	      streamsize __size = _M_file->xsgetn(__conv_buf, _M_buf_size);
 	      
 	      // Part two: (Re)fill internal buf contents from external buf.
@@ -436,7 +436,7 @@ namespace std
 	  // stack. Convert internal buffer plus __c (ie,
 	  // "pending sequence") to temporary conversion buffer.
 	  int __plen = _M_out_end - _M_out_beg;
-	  __extension__ char_type __pbuf[__plen + 1];	      
+	  char_type* __pbuf = static_cast<char_type*>(alloca(sizeof(char_type) * __plen + 1));
 	  traits_type::copy(__pbuf, this->pbase(), __plen);
 	  if (!__testeof)
 	    {
@@ -445,7 +445,7 @@ namespace std
 	    }
 
 	  char_type* __pend;
-	  __extension__ char __conv_buf[__plen];
+	  char* __conv_buf = static_cast<char*>(alloca(__plen));
 	  char* __conv_end;
 	  _M_state_beg = _M_state_cur;
 
