@@ -23,8 +23,8 @@
 #      needed to run library specific tests,
 #      BUILD_DIR:SRC_DIR:PREFIX_DIR:CXX:CXXFLAGS:INCLUDES:LIBS 
 #      the meaning of which is as follows:
-#        BUILD_DIR   build-dir
-#        SRC_DIR     src-dir
+#        BUILD_DIR   libstdc++-v3 build-dir
+#        SRC_DIR     libstdc++-v3 src-dir
 #        PREFIX_DIR  install-dir (meaningful only with --installed-library)
 #        CXX         which C++ compiler is being used
 #        CXXFLAGS    special flags to pass to g++
@@ -122,11 +122,13 @@ esac
 # For built or installed libraries, we need to get right OS-specific bits.
 . ${SRC_DIR}/configure.target
 
-# LIB_PATH == where to find the build libraries for libtool's use
+# LIB_PATH == where to find the C++ build libraries for libtool's use
+# GCC_LIB_PATH == where to find the gcc build libraries for libtool's use
 # CXX == the full pathname of the compiler
 case ${query} in
     --built-library)
     LIB_PATH=${BUILD_DIR}/src
+    GCC_LIB_PATH=${BUILD_DIR}/../../gcc
     CXX="${BUILD_DIR}/../../gcc/g++"
     ;;
     --installed-library)
@@ -143,7 +145,7 @@ CXXFLAGS="-ggdb3 -DDEBUG_ASSERT @SECTION_FLAGS@ @SECTION_LDFLAGS@"
 case ${query} in
     --built-library)
     LIBS="${LIB_PATH}/../libsupc++/libsupc++.la ${LIB_PATH}/libstdc++.la
-	    -no-install"
+	    -no-install -rpath ${GCC_LIB_PATH}"
     case @target_os@ in
         *cygwin*)  LIBS="${LIBS} -nodefaultlibs -lgcc -lcygwin -luser32
                          -lkernel32 -ladvapi32 -lshell32" ;;
